k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: depoy-mapping
  namespace: ingress-depoy
  annotations:
    ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
    - http:
        paths:
          - path: /depoy/
            backend:
              serviceName: depoy-svc
              servicePort: 8080
